--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
