--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
